# when-changed

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: conftest.py  test_cli.py  test_debounce.py  test_events.py  test_is_interested.py  test_patterns.py  test_run_command.py
whenchanged/: whenchanged.py
